# trading-bot-forex

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml
config/: settings.py  strategy_config.yaml
core/analysis/: mtf_analyzer.py  news_filter.py  session_filter.py  signal_scorer.py  sr_detector.py
core/execution/: order_manager.py
core/indicators/: momentum.py  patterns.py  trend.py  volatility.py
core/mt5/: connector.py  data_fetcher.py
core/risk/: drawdown_guard.py  position_sizer.py  sl_tp_manager.py
notifications/: telegram_notifier.py
tests/: test_indicators.py  test_risk_manager.py  test_signal_scorer.py
